# fog-screen-robot-system

./: README.md
cad_models/first_prototype/3D_printing_models/: airflow_former.STL  baseline_housing.SLDPRT  baseline_housing.STL  fan.SLDASM  fan_slot.SLDPRT  fan_slot.STL  fog_container.SLDPRT  fog_container.STL  fogscreen_assembly.SLDASM  (+4 more)
cad_models/iteration_1/: README.md  assembly.md  parts.csv
case_studies_evaluation/: CMakeLists.txt  README.md  package.xml
case_studies_evaluation/launch/: construction_site_nav.launch  search_and_rescue_nav.launch
case_studies_evaluation/maps/: NEC_north_hallway.pgm  NEC_north_hallway.yaml  NEC_west_hallway.pgm  NEC_west_hallway.yaml
case_studies_evaluation/src/: construction_site_evaluation_node.cpp  image_streamer_node.cpp  search_rescue_evaluation_node.cpp
fog-machine-control/: CMakeLists.txt  README.md  SerialCommunication.c++
fog-machine-control/PCB/: README.md
fog-machine-control/PCB/PCB-Materials/: BOM_2024-11-13.csv  PickAndPlace_PCB_2024-11-13.csv
fog-machine-control/case/: FogScreenControllerCase.stl  FogScreenControllerCaseLid.stl
fog-machine-control/case/FogScreenControllerCase/: Klein_FogScreenControllerCaseLidUpdate.SLDPRT  Klein_FogScreenControllerCaseLidUpdate.STL  Klein_FogScreenControllerCaseUpdate.SLDPRT  Klein_FogScreenControllerCaseUpdate.STL
fog-machine-control/fog_machine_controller/: FogMachineController.ino
fog-machine-control/ros_service_fog_control/: README.md  ros_service_fog_control.ino
fog-machine-control/ros_service_fog_control/ros_arduino_service/: ros_arduino_service.ino
(+105 files in other folders)
